--- a/src/app/exam/test/test.component.html
+++ b/src/app/exam/test/test.component.html
@@ -10,9 +10,9 @@
     <div class='text-justify'>
 
         <ul>
-            <li>Your test contains multiple-choice questions with only one answer type questions. There are a total of 15 questions/li>
+            <li>Your test contains Read and Record the Answear of the Questions/li>
             <li>This is a 15 min test. Please make sure you complete it in stipulated time</li>
-            <li>Your test contains multiple-choice questions with only one answer type questions. There are a total of 15 questions</li>
+            <li>There are a total of 5 questions</li>
             <li>You can finish this test any time using the 'Submit' button.</li>
             <li>Negative Marking : NO</li>
             <li>Recommanded Browser : Google Chrome</li>
