--- a/src/app/exam/home/home.component.html
+++ b/src/app/exam/home/home.component.html
@@ -1,18 +1,24 @@
 <div class="row">
 
-  <div class="col-sm-6 col-md-6 ">
-    <div class="fixedPos">
+  <div class="col-sm-6 col-md-6 questionHead">
+    <div>
+      <button class='btn btn-success' *ngIf='!onCam' (click)="onCam = true">Start Recording</button>
+    </div>
+    <div class="fixedPos" *ngIf='onCam'>
       <strong>
         Time Left : {{count}}:{{sec}} <span *ngIf="count == 2" style='color: red;'>2 Min Left</span>
       </strong>
       <br>
-      <webcam [height]="500" [width]="500"></webcam>
+      <webcam [height]="800" [width]="800"></webcam>
     </div>
+
+   
+
   </div>
 
 
   <div class="col-sm-6 col-md-6">
-    <div *ngFor="let item of companies; let i =index" class="questionHead">
+    <!-- <div *ngFor="let item of companies; let i =index" class="questionHead">
       <strong class="question">
         Q {{i+1}} : {{item.ques}}
         <br />
@@ -21,6 +27,17 @@
       <div *ngFor="let a of item.Ans; let j =index" class="question">
         {{j+1}} : &nbsp; <input type="radio" name="{{i+1}}" (change)="handleChange(item.ques,a.result)"> &nbsp;{{a.ANS}}
       </div>
+    </div> -->
+
+    <div class="questionHead">  
+      <ul>
+        <li  class="question"> Introduce Your self in Details. ?</li>
+        <li  class="question"> What is pendulum explain with examples.?</li>
+        <li  class="question"> what is frictional force.?</li>
+        <li  class="question"> explain Gravity.?</li>
+        <li  class="question"> explain Motion in details.?</li>
+
+      </ul>
     </div>
 
     <div class="text-center">
